Fix header alignment (#5)

--- a/css/agency.css
+++ b/css/agency.css
@@ -228,7 +228,14 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+header.masthead .intro-text .intro-subheading > span {
+  padding: 0 1.5rem;
+}
+
 @media (min-width: 768px) {
+  header.masthead {
+    text-align: left;
+  }
   header.masthead .intro-text {
     padding-top: 300px;
     padding-bottom: 200px;
@@ -245,7 +252,6 @@ header.masthead .intro-text .intro-heading {
     font-weight: 600;
     line-height: 75px;
     margin-bottom: 20px;
-    text-align: left;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
