--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -24,10 +24,16 @@ header.masthead {
       margin-bottom: 25px;
       @include heading-font;
     }
+    .intro-subheading {
+      > span {
+        padding: 0 1.5rem;
+      }
+    }
   }
 }
 @media(min-width:768px) {
   header.masthead {
+    text-align: left;
     .intro-text {
       padding-top: 300px;
       padding-bottom: 200px;
@@ -43,8 +49,6 @@ header.masthead {
         font-weight: 600;
         line-height: 75px;
         margin-bottom: 20px;
-		text-align: left;
-		
         @include heading-font;
       }
     }
